syntax="proto3";

package auth;

option go_package = "./auth";

message LoginRequest {
    string username = 1;
    string password = 2 ;
}

message LoginResponse {
    string status = 1 ;
}

message RegisterRequest {
  string username =  1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  string status = 1;
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse){}
  rpc Login(LoginRequest) returns (LoginResponse){}
}
